# openGL-template

Template-project/: CMakeLists.txt  CMakePresets.json
Template-project/apps/: CMakeLists.txt
Template-project/apps/hello/: CMakeLists.txt  hello.cpp
Template-project/apps/hello-glfw/: CMakeLists.txt  hello-glfw.cpp
Template-project/apps/hello-imgui/: CMakeLists.txt
Template-project/apps/project/: ArcBall.cpp  ArcBall.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DisplayManager.cpp  DisplayManager.hpp  Entity.cpp  Entity.hpp  EntityRenderer.cpp  EntityRenderer.hpp  Light.cpp  Light.hpp  Main.cpp  MasterRenderer.cpp  MasterRenderer.hpp  MatrixGenerator.cpp  MatrixGenerator.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  OBJLoader.cpp  OBJLoader.hpp  ObjectShader.cpp  ObjectShader.hpp  Player.cpp  Player.hpp  ProcModelGenerator.cpp  ProcModelGenerator.hpp  Quaternion.cpp  Quaternion.hpp  README.txt  ShaderProgram.cpp  ShaderProgram.hpp  Terrain.cpp  Terrain.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp  TerrainShader.cpp  (+19 more)
Template-project/assets/shaders/: shader.fs  shader.vs  terrainShader.fs  terrainShader.vs  waterShader.fs  waterShader.vs
Template-project/exts/: CMakeLists.txt
Template-project/exts/glad/: CMakeLists.txt
Template-project/exts/imgui/: CMakeLists.txt
